--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ PyMySQL==0.9.3
 python-monkey-business==1.0.0
 pytz==2020.1
 setuptools
+simplecus==1.0.1
 simpleui==4.0.2
 six==1.14.0
 vine==1.3.0
