--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,73 @@
+aliyun-python-sdk-core==2.13.31
+aliyun-python-sdk-kms==2.14.0
+aliyun-python-sdk-sts==3.0.2
 amqp==2.5.2
+asgiref==3.3.1
+autopep8==1.5.4
+boto3==1.17.12
+botocore==1.20.12
 certifi==2020.4.5.1
 cffi==1.14.0
+chardet==4.0.0
+crcmod==1.7
 cryptography==2.9.2
+defusedxml==0.6.0
+diff-match-patch==20200713
 Django==3.1.5
+django-crispy-forms==1.11.1
+django-environ==0.4.5
 django-filter==1.1.0
-django-silk==4.1.0
+django-formtools==2.2
+django-import-export==2.5.0
 django-nested-admin==3.3.0
+django-qiniu-storage==2.3.1
+django-silk==4.1.0
+django-simpleui==2021.2
+django-storages==1.11.1
 djangorestframework==3.12.2
-#djangorestframework-filters==0.11.1
 drf-api-tracking==1.7.8
+et-xmlfile==1.0.1
+fdfs-client==4.0.7
+gprof2dot==2019.11.30
 gunicorn==20.0.4
+httplib2==0.9.2
 idna==2.9
+install==1.3.4
 itsdangerous==1.1.0
+jdcal==1.4.1
+Jinja2==2.11.2
+jmespath==0.10.0
 loguru==0.5.0
+MarkupPy==1.14
+MarkupSafe==1.1.1
 mysqlclient==1.4.6
+odfpy==1.4.1
 olefile==0.46
+openpyxl==3.0.6
+oss2==2.14.0
 Pillow==7.1.2
-pip==20.0.2
 psycopg2-binary==2.8.5
+pyasn1==0.4.8
+pycodestyle==2.6.0
 pycparser==2.20
+pycryptodome==3.10.1
+Pygments==2.7.3
 PyMySQL==0.9.3
+python-dateutil==2.8.1
 python-monkey-business==1.0.0
 pytz==2020.1
-setuptools
-simplecus==1.0.1
+PyYAML==5.4.1
+qiniu==7.3.1
+requests==2.25.1
+rsa==4.7.1
+s3transfer==0.3.4
+simplecus==1.1.1
 simpleui==4.0.2
 six==1.14.0
+sqlparse==0.4.1
+tablib==3.0.0
+toml==0.10.2
+urllib3==1.26.2
 vine==1.3.0
-wheel==0.34.2
-gunicorn==20.0.4
+xlrd==2.0.1
+xlwt==1.3.0
