--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,9 @@ django-crispy-forms==1.11.1
 django-environ==0.4.5
 django-filter==1.1.0
 django-formtools==2.2
-django-import-export==2.5.0
 django-nested-admin==3.3.0
 django-qiniu-storage==2.3.1
 django-silk==4.1.0
-django-simpleui==2021.2
 django-storages==1.11.1
 djangorestframework==3.12.2
 drf-api-tracking==1.7.8
@@ -61,8 +59,6 @@ qiniu==7.3.1
 requests==2.25.1
 rsa==4.7.1
 s3transfer==0.3.4
-simplecus==1.1.1
-simpleui==4.0.2
 six==1.14.0
 sqlparse==0.4.1
 tablib==3.0.0
@@ -71,3 +67,6 @@ urllib3==1.26.2
 vine==1.3.0
 xlrd==2.0.1
 xlwt==1.3.0
+django-import-export
+simpleui
+simplecus
