--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ odfpy==1.4.1
 olefile==0.46
 openpyxl==3.0.6
 oss2==2.14.0
-Pillow==7.1.2
+pillow>=8.1.2
 psycopg2-binary==2.8.5
 pyasn1==0.4.8
 pycodestyle==2.6.0
